[package]
name = "vnt-dns"
version = "0.1.0"
edition = "2024"

[dependencies]
trust-dns-server = "0.23.2"
tokio = { version = "1", features = ["full"] }

vnt = { path = "../vnt", package = "vnt", default-features = false, features = [
    "integrated_tun",
] }
common = { path = "../common", default-features = false, features = [
    "integrated_tun",
] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gethostname = "0.4.3"
anyhow = "1.0.99"
[target.'cfg(any(target_os = "linux",target_os = "macos"))'.dependencies]
sudo = "0.6.0"
signal-hook = "0.3.17"

[features]
default = ["default-feature"]
default-feature = ["server_encrypt"]

server_encrypt = ["vnt/server_encrypt", "common/server_encrypt"]
